kube-apps/openproject/other_files/openproject-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: openproject-ingress
 annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - openproject.dentropydaemon.net
    secretName: openproject-cert
  rules:
    - host: openproject.dentropydaemon.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openproject-service
                port: 
                  number: 80
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - openproject.dentropydaemon.net
    secretName: openproject-cert # < cert-manager will store the created certificate in this secret.
